# PubHub

./: .gitignore  README.md
.github/workflows/: c-cpp.yml  rust.yml
libpubhub/: common.hpp  json.hpp
libpubhub/net/: ClientSocket.cpp  ClientSocket.hpp  ServerSocket.cpp  ServerSocket.hpp  Socket.cpp  Socket.hpp  SocketAddress.cpp  SocketAddress.hpp  exceptions.hpp
libpubhub/server/: channel.cpp  channel.hpp  client.cpp  client.hpp  event.hpp  exceptions.hpp  hub.cpp  hub.hpp  message.cpp  message.hpp  queue.hpp  types.hpp
pubhub-client/: Cargo.toml  Makefile  README.org
pubhub-client/conway-producer/: Cargo.toml
pubhub-client/datetime-producer/: Cargo.toml
pubhub-client/datetime-producer/src/: main.rs
pubhub-client/hwinfo-producer/: Cargo.toml
pubhub-client/hwinfo-producer/src/: main.rs
pubhub-client/pubhub-rs/: Cargo.toml
pubhub-client/pubhub-rs/src/: lib.rs  request.rs  response.rs  stream.rs
pubhub-client/randint-producer/: Cargo.toml
pubhub-client/randint-producer/src/: main.rs
pubhub-client/src/: cli.rs  client.cpp  connection.rs  handlers.rs  logs.rs  main.rs  request.rs  response.rs
pubhub-client/src/pubhub/: connection.rs  error.rs  mod.rs  request.rs  response.rs
pubhub-client/test-client/: Cargo.toml
pubhub-client/test-client/src/: main.rs
pubhub-client/test-listener/: Cargo.toml
pubhub-client/test-listener/src/: main.rs
pubhub-server/: .clang-tidy  Makefile  README.md  compile_commands.json  project.org
pubhub-server/src/: common.cpp  common.hpp  libpubhub  main.cpp  myresult.hpp
pubhub-server/src/core/: client.cpp  (+8 more)
(+53 files in other folders)
